# test_ci_2022

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: FirstOrganizedCMakeConfig.cmake.in
src/log_lib/: CMakeLists.txt
tests/: CMakeLists.txt
